--- a/servlet/web/WEB-INF/web.xml
+++ b/servlet/web/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app>
     <servlet>
         <servlet-name>testServlet</servlet-name>
-        <servlet-class>com.servlet.ServletTest</servlet-class>
+        <servlet-class>com.servlet.basic.ServletTest</servlet-class>
         <load-on-startup>9</load-on-startup>    <!--数字越小执行顺序越靠前-->
     </servlet>
     <servlet-mapping>
@@ -13,12 +13,12 @@
     <!--login-->
     <servlet>
         <servlet-name>loginServlet</servlet-name>
-        <servlet-class>com.servlet.LoginServlet</servlet-class>
+        <servlet-class>com.servlet.basic.LoginServlet</servlet-class>
         <load-on-startup>12</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>loginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
-    
+
 </web-app>
