--- a/SpringMVC/web/WEB-INF/web.xml
+++ b/SpringMVC/web/WEB-INF/web.xml
@@ -2,10 +2,12 @@
 <web-app  version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
           xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
-http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+          http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
     <servlet>
+        <!--默认加载[servlet-name]-servlet.xml 文件-->
         <servlet-name>springmvc</servlet-name>
+        <!--配置Spring MVC的入口 DispatcherServlet，把所有的请求都提交到该Servlet-->
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
@@ -13,4 +15,5 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <servlet-name>springmvc</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
 </web-app>
